# ClosedGL

./: CMakeLists.txt  README.md  fragmentShader.frag  vertexShader.vert
include/: Camera.hpp  ModelViewProjectionUtils.hpp  ProgramManager.hpp  Properties.hpp  PropertyManager.hpp  RenderUtils.hpp  Scene.hpp  ShaderUtils.hpp  colors.hpp
include/3dScene/: Camera.hpp  Model3D.hpp  Scene.hpp
include/3dScene/data/: Material.hpp
include/3dScene/primitives/: Material.hpp  Texture.hpp  Vertex.hpp
include/data/: BoundingBox.hpp  Vertex.hpp
include/data/3dScene/: Camera.hpp
include/data/primitives/: Edge.hpp  Triangle.hpp
include/gui/: Properties.hpp  PropertyManager.hpp
include/rendering/: Close2GLRenderer.hpp  Close2GLRenderingUtils.hpp  OpenGLRenderer.hpp  RenderUtils.hpp  Renderer.hpp  RenderingManager.hpp
include/rendering/Close2GL/: Close2GLRenderer.hpp
include/rendering/Close2GL/rasterization/: RasterizationStrategy.hpp  WireframeRasterizationStrategy.hpp
include/rendering/OpenGL/: OpenGLRenderer.hpp
include/rendering/data/: State.hpp
include/rendering/engines/: Renderer.hpp
include/rendering/engines/Close2GL/: Close2GLRenderer.hpp  Close2GLRenderingUtils.hpp
include/rendering/rasterization/: FilledRasterizationStrategy.hpp  PointsRasterizationStrategy.hpp  RasterizationStrategy.hpp  WireframeRasterizationStrategy.hpp
include/rendering/shaders/: ShaderUtils.hpp
include/rendering/shading/: ShaderUtils.hpp
include/shaders/: ShaderUtils.hpp
include/shading/: ShaderUtils.hpp
include/ui/: Properties.hpp  PropertyManager.hpp  Window.hpp
lib/glfw/: GLFW.cbp  Makefile  cmake_uninstall.cmake
model/: cube.in  triangle_notexture.in  triangle_textured.in
src/: Camera.cpp  ModelViewProjectionUtils.cpp  ProgramManager.cpp  PropertyManager.cpp  RenderUtils.cpp  Scene.cpp  main.cpp
src/3dScene/: Camera.cpp  Model3D.cpp  Scene.cpp
src/3dScene/primitives/: Texture.cpp
src/data/3dScene/: Model3D.cpp
src/gui/: PropertyManager.cpp
src/rendering/: Close2GLRenderer.cpp  Close2GLRenderingUtils.cpp  OpenGLRenderer.cpp  RenderUtils.cpp  RenderingManager.cpp
src/rendering/Close2GL/: Close2GLRenderer.cpp
src/rendering/rasterization/: FilledRasterizationStrategy.cpp  PointsRasterizationStrategy.cpp  RasterizationStrategy.cpp  WireframeRasterizationStrategy.cpp
src/rendering/shaders/: fragmentShader.frag  vertexShader.vert
src/rendering/shading/: ShaderUtils.cpp  fragmentShader.frag  vertexShader.vert
src/shaders/: ShaderUtils.cpp  fragmentShader.frag  vertexShader.vert
src/shading/: ShaderUtils.cpp  vertexShader.vert
src/ui/: PropertyManager.cpp  Window.cpp
(+39 files in other folders)
